--- a/aboutUs.html
+++ b/aboutUs.html
@@ -23,7 +23,7 @@
                     <p class="bolder midnight-blue" style="margin-top:-15px;margin-left:35px;">JUNIOR PHILIPPINE INSTITUTE</p>
                     <p class="bolder midnight-blue" style="margin-top:-15px;margin-left:35px;">OF ACCOUNTANTS</p>
                 </div>
-                <div class="col-sm-3 navText" style="margin-top:15px;">
+                <div class="col-sm-3" style="margin-top:15px;">
                     <h1><a href="i.html"  class="bolder midnight-blue noHover2" >HOME</a></h1>
                 <h1 style="margin-top:-10px;"><a href="aboutUs.html/#about" class="bolder midnight-blue noHover2">ABOUT THE LOGO</a></h1>
                 <h1 style="margin-top:-10px;"> <a href="aboutUs.html/#siuala" class="bolder midnight-blue noHover2">SIUALA FEDERATION</a></h1>
