--- a/i.html
+++ b/i.html
@@ -65,11 +65,11 @@
             </div>
             <div class="col-sm-1"></div>
             <div class="col-sm-2 navText">
-                <h2><a href="#"  class="bolder cloud" >HOME</a></h2>
-                <h2 style="margin-top:-10px;"><a href="i.html/#second" class="bolder cloud">ABOUT US</a></h2>
-                <h2 style="margin-top:-10px;"> <a href="i.html/#blog" class="bolder cloud">BLOG</a></h2>
-                <h2 style="margin-top:-10px;"><a href="registration.html" class="bolder cloud">REGISTRATION</a></h2>
-                <h2 style="margin-top:-10px;"><a href="i.html/#contact" class="bolder cloud">CONTACT US</a></h2>
+                <h2><a href="#"  class="bolder cloud noHover" >HOME</a></h2>
+                <h2 style="margin-top:-10px;"><a href="i.html/#second" class="bolder cloud noHover">ABOUT US</a></h2>
+                <h2 style="margin-top:-10px;"> <a href="i.html/#blog" class="bolder cloud noHover">BLOG</a></h2>
+                <h2 style="margin-top:-10px;"><a href="registration.html" class="bolder cloud noHover">REGISTRATION</a></h2>
+                <h2 style="margin-top:-10px;"><a href="i.html/#contact" class="bolder cloud noHover">CONTACT US</a></h2>
             </div>
         </div>
 
