--- a/index.html
+++ b/index.html
@@ -217,12 +217,14 @@ potential - thus supplying quality workforce worthy of global recognition.</p>
         <div class="contactUs" id="contact">
             <div class="row contactUsRow">
                 <div class="col-sm-7">
+                    <form action="http://formspree.io/nmyc.nfjpia1617@gmail.com" method="post">
                     <div class="inputs">
                     <input type="text" name="name" placeholder="Your Name"><br><br>
                     <input type="text" name="email" placeholder="Your Email"><br><br>
                     <textarea rows="8" cols="100" placeholder="Your Message"></textarea>
                     <button>Submit</button>
                     </div>
+                    </form>
                 </div>
                 <div class="col-sm-4">
                     <center>
