--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     </div>
                 </div>
                 <div class="col-sm-12">
-                    <center><h1 style="margin-top:0px;"><a href="aboutUs.html" class="bolder midnight-blue noHover" >SEE MORE</a></h1></center>
+                    <center><h1 style="margin-top:0px;"><a href="aboutUs.html" class="bolder midnight-blue noHover" target="_blank">SEE MORE</a></h1></center>
    
             </div>
         </div>
