--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                     </li>
                     <li><a href="https://twitter.com/nfjpiaofficial" class="btn btn-default btn-lg"target="_blank"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">@nfjpiaofficial</span></a>
                     </li>
-                    <li><a href="https://instagr.am/nfjpiaofficial" class="btn btn-default btn-lg"target="_blank"><i class="fa fa-instagram fa-fw"></i> <span class="network-name">@nfjpiaofficial</span></a>
+                    <li><a href="https://www.instagram.com/nfjpiaofficial/" class="btn btn-default btn-lg"target="_blank"><i class="fa fa-instagram fa-fw"></i> <span class="network-name">@nfjpiaofficial</span></a>
                     </li>
                 </ul>
                 
