--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
             </div>
         </div>
     </section>
-    <section id="dl" class="container content-section text-center">
+    <section id="DL" class="container content-section text-center">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <br><br>
