--- a/index.html
+++ b/index.html
@@ -161,7 +161,8 @@
                  <img src="img/nymclogo.png"height="200" width="200">
                     <h2>Join the 19th NMYC</h2>
                     <p>The 19th National Mid-Year Convention (NMYC) opts to gather all of the Local Chapter and Regional Council representatives in the entire nation and aims to let the delegates show their talents and skills, all to fortify the solidarity that JPIAns have. In our quest to be united, there would be activities which will test and glorify their academic prowess, non-academic artistry, leadership potentials, and character-building opportunities.</p>
-                    <a href="reg.html" class="btn btn-default btn-lg"target="_blank">Click to Register</a>
+                    <a href="reg.html" class="btn btn-default btn-lg"target="_blank">Click to Register as a Delegate</a>
+                <a href="reg.html" class="btn btn-default btn-lg"target="_blank">Click to Register as Group</a>
                 </div>
             </div>
         </div>
