--- a/GroupReg/registration.html
+++ b/GroupReg/registration.html
@@ -33,7 +33,7 @@
         <content>
             <div class="thirdContentReg" id="group"><center>
          <h2 CLASS="bolder">READ ME <br></h2>
-         <h3 CLASS="bolder">If the Representative will register as a delegate, </h3><h3 CLASS="bolder">FILL-OUT A 
+         <h3 CLASS="bolder">If the Representative wants register as a delegate, </h3><h3 CLASS="bolder">FILL-OUT A 
              FORM ON THE RIGHT SIDE FOR YOU TO BE RECOGNIZED AS DELEGATE</h3></center>
             </div>
                                                
