--- a/GroupReg/registration.html
+++ b/GroupReg/registration.html
@@ -57,7 +57,8 @@
                     
                           
                           <select id="regionSolo" name="Region" class="form-control inputReg " placeholder="Region">
-                              <option value="VOID">Select your Regional Council</option>      
+                              <option value="VOID">Select your Regional Council</option>
+                              <option value="NCR">National Capital Region</option>
                               <option value="Region 1 & Car">Region 1 & CAR</option>
                                     <option value="Region 2">Region 2</option>
                                     <option value="Region 3">Region 3</option>
