--- a/reg.html
+++ b/reg.html
@@ -25,10 +25,9 @@ function validateForm() {
               <label class="light" for="design"><center>You should fill-out all the neccessary fields.</center></label><br>
         <fieldset>
           <legend><span class="number">1</span>Your basic info</legend>
-<label for="memstat> JPIAn or Non JPIAn?</label>
+<label for="memstat> JPIAn or Non JPIAn?</label><br>
 <input type="checkbox" id="memstat" value="JPIAn" name="MemStat">
 <label class="light" for="design">I'm a JPIAn</label>
-
 
 
 <input type="checkbox" id="memstat" value="Non-JPIAn" name="MemStat">
