--- a/reg.html
+++ b/reg.html
@@ -26,9 +26,9 @@ function validateForm() {
         <fieldset>
           <legend><span class="number">1</span>Your basic info</legend>
 <label for="memstat> JPIAn or Non JPIAn?</label><br>
-<input type="checkbox" id="memstat" value="JPIAn" name="MemStat">
-<label class="light" for="design">I'm a JPIAn</label>
 
+<input type="checkbox" id="memstat" value="Non-JPIAn" name="MemStat">
+<label class="light" for="design">Non-JPIAn</label>
 
 <input type="checkbox" id="memstat" value="Non-JPIAn" name="MemStat">
 <label class="light" for="design">Non-JPIAn</label>
