--- a/reg.html
+++ b/reg.html
@@ -27,8 +27,11 @@ function validateForm() {
           <legend><span class="number">1</span>Your basic info</legend>
 <label for="memstat> JPIAn or Non JPIAn?</label><br>
 
-<input type="checkbox" id="memstat" value="Non-JPIAn" name="MemStat">
-<label class="light" for="design">Non-JPIAn</label>
+<input type="checkbox" id="memstat" value="VoidAn" name="MemStat">
+<label class="light" for="design"></label>
+
+<input type="checkbox" id="memstat" value="JPIAn" name="MemStat">
+<label class="light" for="design">JPIAn</label>
 
 <input type="checkbox" id="memstat" value="Non-JPIAn" name="MemStat">
 <label class="light" for="design">Non-JPIAn</label>
