--- a/reg.html
+++ b/reg.html
@@ -184,6 +184,8 @@ function validateForm() {
 
 <input type="checkbox" id="non-acad" value="JPIA Parody" name="Non-Academic Events">
 <label class="light" for="design">JPIA Parody</label><br>
+				 
+<input type="checkbox" id="non-acad" value="Fashion House" name="Non-Academic Events"><label class="light" for="design">Fashion House Competition</label><br>
 
 <input type="checkbox" id="non-acad" value="NFJPIA Best Dance Crew" name="Non-Academic Events">
 <label class="light" for="design">NFJPIA Best Dance Crew</label><br>
