--- a/reg.html
+++ b/reg.html
@@ -39,8 +39,8 @@ function validateForm() {
 <label class="light" for="design">Adviser</label>
 				 
 				 <fieldset>
-          <legend><span class="number">1</span>Your basic info</legend>
-<label for="memstat>Regular Delegate or Stay-out</label><br>
+        
+<label>Regular Delegate or Stay-out</label><br>
 
 <input type="checkbox" id="memstat" value="VoidAn" name="StayStatus">
 <label class="light" for="design"></label>
