--- a/reg.html
+++ b/reg.html
@@ -40,7 +40,7 @@ function validateForm() {
 				 
 				 <fieldset>
         
-<label>Regular Delegate or Stay-out</label><br>
+<label>Regular Delegate or Stay-out</label>
 
 
 
