--- a/reg.html
+++ b/reg.html
@@ -25,10 +25,9 @@ function validateForm() {
               <label class="light" for="design"><center>You should fill-out all the neccessary fields.</center></label><br>
         <fieldset>
           <legend><span class="number">1</span>Your basic info</legend>
-<label for="memstat> JPIAn? or Non JPIAn? or Adviser?</label><br>
+<label> JPIAn? or Non JPIAn? or Adviser?</label><br>
 
-<input type="checkbox" id="memstat" value="VoidAn" name="MemStat">
-<label class="light" for="design"></label>
+
 
 <input type="checkbox" id="memstat" value="JPIAn" name="MemStat">
 <label class="light" for="design">JPIAn</label>
