--- a/reg.html
+++ b/reg.html
@@ -25,7 +25,7 @@ function validateForm() {
               <label class="light" for="design"><center>You should fill-out all the neccessary fields.</center></label><br>
         <fieldset>
           <legend><span class="number">1</span>Your basic info</legend>
-<label> JPIAn? or Non JPIAn? or Adviser?</label><br>
+<label> JPIAn? or Non JPIAn? or Adviser?</label>
 
 
 
