--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                         <a href="#blog">Blog</a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#download">Join NMYC!</a>
+                        <a href="#download">Join 1st PAC!</a>
                     </li>
                     <li class="page-scroll">
                         <a href="#DL">Downloadables</a>
