--- a/PAC/index.html
+++ b/PAC/index.html
@@ -240,7 +240,7 @@ testimonies of real-life leaders who made a difference in today’s society. </P
             <div class="row">
                 <div class="col-sm-12">
                     <div class="clients text-center wow fadeInUp" data-wow-duration="500ms" data-wow-delay="300ms">
-                        <p><img src="images/home/clients.png" class="img-responsive" alt=""></p></div></div></div></div></section>     
+                        <p><img src="images/home/clients3.png" class="img-responsive" alt=""></p></div></div></div></div></section>     
                     
                     <img src="images/home/profile1.png" class="margin-bottom" alt="">
                     
