--- a/PAC/index.html
+++ b/PAC/index.html
@@ -298,6 +298,7 @@ sent to you containing the next steps towards the completion of the PAC Registra
                         <p>AFP Theater, Quezon City</p>
                         <p>March 5, 2017 </p>
                         <a href="http://tinyurl.com/PACNCRLuzon" class="btn btn-common"><b>Luzon and NCR Application Form</b></a>
+			    <a href="http://nfjpia.com/PAC/luzncr.zip" class="btn btn-common"><b>NCR Packet</b></a>
 
                     </div>
                 </div>
@@ -310,6 +311,7 @@ sent to you containing the next steps towards the completion of the PAC Registra
                        <p>Origami Convention Center, Ormoc City</p>
                         <p>February 25, 2017 </p>
                         <a href="http://tinyurl.com/PACVisayas" class="btn btn-common"><b>Visayas Application Form</b></a>
+			     <a href="http://nfjpia.com/PAC/visayas.zip" class="btn btn-common"><b>Visayas Packet</b></a>
                     </div>
                 </div>
                  
@@ -322,7 +324,9 @@ sent to you containing the next steps towards the completion of the PAC Registra
                         <h2>Mindanao</h2>
                        <p>The VIP Hotel, Cagayan de Oro City</p>
                         <p>March 11-12, 2017 </p>
-                        <a href="http://tinyurl.com/PACMindanao" class="btn btn-common"><b>Mindanao Application Form</b></a>
+                        <a href="http://tinyurl.com/PACMindanao" class="btn btn-common"><b>Visayas Application Form</b></a>
+			    <a href="http://nfjpia.com/PAC/mindanao.zip" class="btn btn-common"><b>Visayas Application Form</b></a>
+			    
                     </div>
                 </div>
             </div>
