--- a/PAC/index.html
+++ b/PAC/index.html
@@ -297,7 +297,8 @@ sent to you containing the next steps towards the completion of the PAC Registra
                         <h2>Luzon and NCR</h2>
                         <p>AFP Theater, Quezon City</p>
                         <p>March 5, 2017 </p>
-                        <a href="http://tinyurl.com/PACNCRLuzon" class="btn btn-common"><b>Luzon and NCR Application Form</b></a>
+                        <a href="http://tinyurl.com/PACNCRLuzon" class="btn btn-common"><b>Luzon and NCR Application Form</b></a><br>
+			    <br>
 			    <a href="http://nfjpia.com/PAC/luzncr.zip" class="btn btn-common"><b>NCR Packet</b></a>
 
                     </div>
@@ -311,6 +312,8 @@ sent to you containing the next steps towards the completion of the PAC Registra
                        <p>Origami Convention Center, Ormoc City</p>
                         <p>February 25, 2017 </p>
                         <a href="http://tinyurl.com/PACVisayas" class="btn btn-common"><b>Visayas Application Form</b></a>
+			    <br>
+			    <br>
 			     <a href="http://nfjpia.com/PAC/visayas.zip" class="btn btn-common"><b>Visayas Packet</b></a>
                     </div>
                 </div>
@@ -324,7 +327,8 @@ sent to you containing the next steps towards the completion of the PAC Registra
                         <h2>Mindanao</h2>
                        <p>The VIP Hotel, Cagayan de Oro City</p>
                         <p>March 11-12, 2017 </p>
-                        <a href="http://tinyurl.com/PACMindanao" class="btn btn-common"><b>Visayas Application Form</b></a>
+                        <a href="http://tinyurl.com/PACMindanao" class="btn btn-common"><b>Visayas Application Form</b></a><br>
+			    <br>
 			    <a href="http://nfjpia.com/PAC/mindanao.zip" class="btn btn-common"><b>Visayas Application Form</b></a>
 			    
                     </div>
