--- a/PAC/index.html
+++ b/PAC/index.html
@@ -299,7 +299,7 @@ sent to you containing the next steps towards the completion of the PAC Registra
                         <p>March 5, 2017 </p>
                         <a href="http://tinyurl.com/PACNCRLuzon" class="btn btn-common"><b>Luzon and NCR Application Form</b></a><br>
 			    <br>
-			    <a href="http://nfjpia.com/PAC/luzncr.zip" class="btn btn-common"><b>NCR Packet</b></a>
+			    <a href="http://nfjpia.com/PAC/luzncr.zip" class="btn btn-common"><b>Luzon and NCR Packet</b></a>
 
                     </div>
                 </div>
