--- a/new/index-nfjpia.html
+++ b/new/index-nfjpia.html
@@ -24,7 +24,7 @@
 
 	<!-- Document Title
 	============================================= -->
-	<title>Home - Blog Layout | Canvas</title>
+	<title>NFJPIA - Hugyaw</title>
 
 </head>
 
