--- a/new/index-nfjpia.html
+++ b/new/index-nfjpia.html
@@ -63,10 +63,7 @@
 						<ul>
 							<li><a href="#home" data-scrollto="#slider" data-offset="100"><div>Home</div></a></li>
 							<li><a href="#" data-scrollto="#about" data-offset="100"><div>About</div></a></li>
-							<li><a href="#about" data-scrollto="#about" data-offset="100"><div>Hugyaw Federation</div></a></li>
-							<li><a href="#" data-scrollto="#about" data-offset="100"><div>Authors</div></a></li>
-							<li><a href="#" data-scrollto="#about" data-offset="100"><div>Portfolio</div></a></li>
-							<li><a href="#" data-scrollto="#about" data-offset="100"><div>Blog</div></a></li>
+							<li><a href="#about" data-scrollto="#about" data-offset="100"><div>Hugyaw</div></a></li>
 							<li><a href="#" data-scrollto="#advertisements" data-offset="100"><div>Advertisements</div></a></li>
 							<li><a href="#" data-scrollto="#downloads" data-offset="100"><div>Downloads</div></a></li>
 						</ul>
