--- a/pak/index-nfjpia.html
+++ b/pak/index-nfjpia.html
@@ -24,7 +24,7 @@
 
 	<!-- Document Title
 	============================================= -->
-	<title>Home - Blog Layout | Canvas</title>
+	<title>NFJPIA| National Federation of Junior Philippine Institute of Accountants</title>
 
 </head>
 
