--- a/pak/index-nfjpia.html
+++ b/pak/index-nfjpia.html
@@ -282,7 +282,7 @@
 									<p class="lead topmargin-sm">The Quickbrown Fox Jumps Over the Lazy Dog.</p>
 								</div>
 
-								<a href="#" class="button button-border button-rounded button-light button-large">Go to Vimeo</a>
+								<a href="http://bit.ly/2uRsBhu" class="button button-border button-rounded button-light button-large">Download the Packet now!</a>
 
 							</div>
 
