--- a/pak/index-nfjpia.html
+++ b/pak/index-nfjpia.html
@@ -257,9 +257,9 @@
 	
 	
 	
-	 <section id="event" div class="clear">
+	<div class="clear"></div>
 
-				<div class="section nomargin noborder" style="background-image: url('images/hugyaw.jpg');">
+				<section id="event" div class="section nomargin noborder" style="background-image: url('images/hugyaw.jpg');">
 					
 				</div>
 
