--- a/pak/index-nfjpia.html
+++ b/pak/index-nfjpia.html
@@ -259,7 +259,7 @@
 	
 	<div class="clear"></div>
 
-				<section id="event" div class="section nomargin noborder" style="background-image: url('images/hugyaw.jpg');">
+				<section id="event"> <div class="section nomargin noborder" style="background-image: url('images/hugyaw.jpg');">
 					
 				</div>
 
