--- a/pak/index-nfjpia.html
+++ b/pak/index-nfjpia.html
@@ -268,7 +268,7 @@
 					
 					
 
-				<div class="section parallax full-screen dark nomargin noborder" style="background-image: url('https://scontent.fmnl9-1.fna.fbcdn.net/v/t1.0-9/15027986_1176954509055676_8265206588879440625_n.jpg?oh=b130f6959c96f1eda8d13fa43a842180&oe=5A3C8DA1');" data-stellar-background-ratio="0.4">
+				<div class="section parallax full-screen dark nomargin noborder" style="background-image: url('https://scontent.fmnl9-1.fna.fbcdn.net/v/t1.0-9/15027986_1176954509055676_8265206588879440625_n.jpg?oh=b130f6959c96f1eda8d13fa43a842180&oe=5A3C8DA1')>
 					<div class="vertical-middle">
 						<div class="container clearfix">
 
