--- a/pak/index-nfjpia.html
+++ b/pak/index-nfjpia.html
@@ -168,7 +168,7 @@
 
                 <section id="hugyaw">
 						
-  <div class="section parallax dark nomargin noborder" style="padding: 20px 0; background-image: url('images/hugyaw.jpg');" data-stellar-background-ratio="0.4">
+  <div class="section parallax dark nomargin noborder" style="background-image: url('images/hugyaw.jpg');" data-stellar-background-ratio="0.4">
 					<div class="col-md-3"></div>
                     <div class="col-md-9 container left clearfix">
 
