--- a/pak/index-nfjpia.html
+++ b/pak/index-nfjpia.html
@@ -15,11 +15,11 @@
 	<link rel="stylesheet" href="css/animate.css" type="text/css" />
 	<link rel="stylesheet" href="css/magnific-popup.css" type="text/css" />
 
+	<link rel="stylesheet" href="css/responsive.css" type="text/css" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
-
-	<!--[if lt IE 9]>
+	
 		<script src="http://css3-mediaqueries-js.googlecode.com/svn/trunk/css3-mediaqueries.js"></script>
-	<![endif]-->
+
 
 	<!-- Document Title
 	============================================= -->
