--- a/pak/index-nfjpia.html
+++ b/pak/index-nfjpia.html
@@ -14,9 +14,8 @@
 	<link rel="stylesheet" href="css/animate.css" type="text/css" />
 	<link rel="stylesheet" href="css/magnific-popup.css" type="text/css" />
 
-	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<link rel="stylesheet" href="css/responsive.css" type="text/css" />
 	
-
 
 	
 	
