--- a/newnfjpia/index.html
+++ b/newnfjpia/index.html
@@ -3,7 +3,8 @@
 
 
 <head>
-	<meta charset="UTF-8" content="width=device-width, initial-scale=1, maximum-scale=1">
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
 	<title>NFJPIA | National Federation Junior Philippine Institute of Accoutants</title>
 
